# VideoLibraryOptimizer

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat  start.ps1
backend/vlo/: __init__.py  config.py  deps.py  ffmpeg_dist.py  logbuffer.py  main.py  naming.py  sysstats.py
backend/vlo/api/: common.py  routes_jobs.py  routes_library.py  routes_logs.py  routes_scan.py  routes_settings.py  routes_system.py  schemas.py  ws.py
backend/vlo/core/: enums.py  errors.py  models.py
backend/vlo/encode/: ffmpeg_cmd.py  kill_on_close.py  profiles.py  runner.py  suspend.py  validate.py
backend/vlo/jobs/: diskspace.py  manager.py  pipeline.py
backend/vlo/metadata/: keywords.py  tmdb.py
backend/vlo/probe/: ffprobe.py  parser.py  service.py
backend/vlo/scan/: classifier.py  scanner.py
backend/vlo/scoring/: estimate.py  reference.py  score.py
backend/vlo/storage/: db.py  repo_jobs.py  repo_meta.py  repo_scan.py  repo_settings.py
backend/vlo/ws/: broadcaster.py
frontend/: app.js  index.html  styles.css
packaging/: build_portable.ps1  start-portable.bat
tests/: conftest.py
tests/integration/: test_encode_pipeline.py  test_full_pipeline.py
tests/unit/: test_api.py  test_classifier.py  test_db.py  test_ffmpeg_cmd.py  test_jobs.py  test_kill_on_close.py  test_metadata.py  test_naming.py  test_parser.py  test_scanner.py  test_scoring.py  test_suspend.py  test_validate.py
tools/: fetch_ffmpeg.py
