[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "videolibraryoptimizer"
version = "0.1.6"
description = "Scan a video library, rank heavy files by re-encode priority, and re-encode them (quality-focused, lightweight) safely."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Multimedia :: Video :: Conversion",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[project.scripts]
vlo = "vlo.main:run"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that require ffmpeg/ffprobe to be installed",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
